--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -30,9 +30,14 @@ a {
 	background-color: #151515;
 }
 
-/* .header-main {
-	border-color: transparent;
-} */
+.header-main {
+	background-color: transparent;
+
+	position: absolute;
+	z-index: 5;
+	left: 0;
+	right: 0;
+}
 
 .header__inner {
 	display: flex;
@@ -56,6 +61,38 @@ a {
 
 .main {
 	flex-grow: 1;
+}
+
+.top {
+	color: #FFF;
+	text-align: center;
+
+	padding-top: 250px;
+	padding-bottom: 50px;
+
+	position: absolute;
+	z-index: 5;
+	left: 0;
+	right: 0;
+}
+
+.title {
+	padding-bottom: 40px;
+
+	font-size: 96px;
+	font-weight: 700;
+}
+
+.top__link {
+	display: inline-block;
+	background-color: #151515;
+	padding: 23px;
+	max-width: 430px;	
+	width: 100%;
+
+	text-transform: uppercase;
+	font-size: 36px;
+	font-weight: 700;
 }
 
 .footer {
@@ -106,3 +143,38 @@ a {
 	gap: 40px;
 }
 
+.swiper::after {
+	content: '';
+	background: rgba(21, 21, 21, .3);
+	position: absolute;
+	z-index: 5;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+}
+
+.swiper-slide {
+	height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+.swiper-pagination-bullet {
+	width: 120px;
+	height: 3px;
+	background-color: #151515;
+	border-radius: 0;
+	opacity: 1;
+	margin: 0 15px !important;
+}
+
+.swiper-pagination-bullet-active {
+	height: 6px;
+	background-color: #FFF;
+}
+
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+	bottom: 50px;
+}
